refactor(agent): 新增 handleTaskFailure() 替代 failTask() 用于任务失败处理